The Bible settings is now the location where to set the stylesheet for export
https://github.com/bibledit/cloud/issues/664

--- a/bb/settings.html
+++ b/bb/settings.html
@@ -68,15 +68,26 @@ translate("The public can give feedback")
 <!-- #ENDZONE write_access -->
 
 <p>
-translate("Stylesheet"):
+translate("Stylesheet for editing"):
 <!-- #BEGINZONE write_access -->
-<a href="settings?bible=##bible##&stylesheet=">
+<a href="settings?bible=##bible##&stylesheetediting=">
   <!-- #ENDZONE write_access -->
-  ##stylesheet##
+  ##stylesheetediting##
   <!-- #BEGINZONE write_access -->
 </a>
 <!-- #ENDZONE write_access -->
 </p>
+<p>
+translate("Stylesheet for export"):
+<!-- #BEGINZONE write_access -->
+<a href="settings?bible=##bible##&stylesheetexport=">
+  <!-- #ENDZONE write_access -->
+  ##stylesheetexport##
+  <!-- #BEGINZONE write_access -->
+</a>
+<!-- #ENDZONE write_access -->
+</p>
+
 
 <!-- #BEGINZONE server -->
 <p>
