--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.955: The Bible settings is now the location where to set the stylesheet for export.</p>
 <p>5.0.955: All emails about a merge conflict now detail the book and chapter number.</p>
 <p>5.0.954: Bigger fonts for the Bible text in the merge irregularity email.</p>
 <p>5.0.954: Can enable or disable automatic daily check per Bible.</p>
