--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.959: Support for the USFM fig markup in export to html and OpenDocument.</p>
 <p>5.0.956: On going to another verse the Resources page always scrolls to the top position.</p>
 <p>5.0.955: The Bible settings is now the location where to set the stylesheet for export.</p>
 <p>5.0.955: All emails about a merge conflict now detail the book and chapter number.</p>
