--- a/help/installcloudcentos.html
+++ b/help/installcloudcentos.html
@@ -1,6 +1,6 @@
 <h2>translate("Install Bibledit Cloud on CentOS")</h2>
 <p>
-  translate("Follow the steps below to install Bibledit Cloud.")
+  translate("Follow the steps below to install Bibledit Cloud on CentOS 7 and 8.")
   translate("It needs basic knowledge about working with CentOS Server.")
 </p>
 <ol>
@@ -10,8 +10,14 @@
   <p><code>sudo yum update</code></p>
 </li>
 <li>
+  <p>translate("For CentOS 7 install and activate a newer compiler:")</p>
+  <p><code>sudo yum install centos-release-scl</code></p>
+  <p><code>sudo yum install devtoolset-7-gcc-c++</code></p>
+  <p><code>sudo scl enable devtoolset-7 bash</code></p>
+</li>
+<li>
   <p>translate("Install the software Bibledit relies on:")</p>
-  <p><code>sudo yum install autoconf automake gcc gcc-c++ gcc-toolset-10-gcc-c++ git zip unzip pkgconfig libcurl-devel openssl-devel curl make poppler-utils libxml2-devel</code></p>
+  <p><code>sudo yum install autoconf automake gcc gcc-c++ gcc-toolset-10-gcc-c++ libtool git zip unzip pkgconfig libcurl-devel openssl-devel curl make poppler-utils libxml2-devel</code></p>
 </li>
 <li>
   <p>
@@ -64,6 +70,10 @@
   translate("This takes a while.")
   translate("There will be many technical messages, but there should be no errors.")
   </p>
+</li>
+<li>
+  <p>translate("For CentOS 7 deactivate the previously activated compiler:")</p>
+  <p><code>exit</code></p>
 </li>
 <li>
   <p>translate("Open port 8080 in the firewall:")</p>
