--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.962: Can left-align verse numbers in poetry in exports to OpenDocument.</p>
 <p>5.0.961: Better spacing while inserting footnotes and cross references.</p>
 <p>5.0.959: Support for the USFM fig markup in export to html and OpenDocument.</p>
 <p>5.0.956: On going to another verse the Resources page always scrolls to the top position.</p>
