All editing anomaly emails now display the book and chapter
https://github.com/bibledit/cloud/issues/676

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.964: All editing anomaly emails now display the book and chapter.</p>
 <p>5.0.963: Keep the navigation history for two weeks.</p>
 <p>5.0.963: A long press on the arrows for going back and going forward brings up the history menu.</p>
 <p>5.0.962: Can left-align verse numbers in poetry in exports to OpenDocument.</p>
