--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.964: Well-formed USFM check on opening markup followed by closing markup without text.</p>
 <p>5.0.964: Fixed: Clicking a passage in a checking result goes to the beginning of the Bible.</p>
 <p>5.0.964: USFM check on the \fig markup.</p>
 <p>5.0.964: All editing anomaly emails now display the book and chapter.</p>
