--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.966: Fix editable clipboard in the Bible editors.</p>
 <p>5.0.965: Well-formed USFM check on note or cross reference without content.</p>
 <p>5.0.964: Well-formed USFM check on opening markup followed by closing markup without text.</p>
 <p>5.0.964: Fixed: Clicking a passage in a checking result goes to the beginning of the Bible.</p>
