--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.966: Includes the Easy English Bible Commentary as a resource.</p>
 <p>5.0.966: Does not cache resources during Cloudflare DDoS protection.</p>
 <p>5.0.966: Fix editable clipboard in the Bible editors.</p>
 <p>5.0.965: Well-formed USFM check on note or cross reference without content.</p>
