Verse editor collapses whitespace
https://github.com/bibledit/cloud/issues/711

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,6 +1,6 @@
 <h1>ChangeLog</h1>
 
-<p>5.0.971: The USFM and chapter editors collapse multiple spaces into one space.</p>
+<p>5.0.971: The three Bible editors collapse multiple spaces into one space.</p>
 <p>5.0.966: Includes the Easy English Bible Commentary as a resource.</p>
 <p>5.0.966: Does not cache resources during Cloudflare DDoS protection.</p>
 <p>5.0.966: Fix editable clipboard in the Bible editors.</p>
