--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.976: Larger emails with change notificatons are split up in smaller parts.</p>
 <p>5.0.972: Better handling of pasted text in the Bible editors.</p>
 <p>5.0.971: The three Bible editors collapse multiple spaces into one space.</p>
 <p>5.0.966: Includes the Easy English Bible Commentary as a resource.</p>
