--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.977: Can only do zipped exports on the Cloud edition.</p>
 <p>5.0.977: Better placement of cursor after pasting text in the notes editor.</p>
 <p>5.0.976: Larger emails with change notificatons are split up in smaller parts.</p>
 <p>5.0.972: Better handling of pasted text in the Bible editors.</p>
