--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.979: Advanced search results can be limited to Old or New Testament books.</p>
 <p>5.0.978: Fixed: Rich divider cannot go to website at link within workspace.</p>
 <p>5.0.978: Fixed: Cannot view exported files.</p>
 <p>5.0.977: Can only do zipped exports on the Cloud edition.</p>
