Display the passage in a note, enhancement idea from #761

--- a/notes/comment.html
+++ b/notes/comment.html
@@ -1,4 +1,5 @@
 <p><a href="index">translate("Back to notes list")</a></p>
+<p>translate("Passage"): ##passage##</p>
 <p>translate("Summary"): ##summary##</p>
 <div>##content##</div>
 <hr>
