--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.979: Can set automatic note citations in export to OpenDocument.</p>
 <p>5.0.979: Note citations in Bible editor follow settings in stylesheet.</p>
 <p>5.0.979: Check on space before final note or cross reference markup.</p>
 <p>5.0.979: Advanced search results can be limited to Old or New Testament books.</p>
