--- a/personalize/index.html
+++ b/personalize/index.html
@@ -348,6 +348,19 @@ translate("Bibledit always sends the focused verse reference to Accordance.")
 <!-- #ENDZONE indonesiancloudfree -->
 
 
+<!-- #BEGINZONE advancedmode -->
+<br> Todo
+<p class="settings-container">
+  <label for="dateformat">translate("Date format in consultation notes"):<span class="tooltip"></span>
+    <span class="tooltip-text">translate("The date format to use for consultation notes?")</span>
+  </label>
+  <select id="dateformat" name="dateformat" value="##dateformat##">
+    ##dateformatoptags##
+  </select>
+</p>
+<!-- #ENDZONE advancedmode -->
+
+
 <br>
 <script type="text/javascript" src="index.js?##VERSION##"></script>
 <script type="text/javascript" src="../assets/checkbox.js?##VERSION##"></script>
