Can set the date format in consultation notes
https://github.com/bibledit/cloud/issues/756

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,6 +1,6 @@
 <h1>ChangeLog</h1>
 
-<p>5.0.979: Formats the date in consultation notes according to the system locale.</p>
+<p>5.0.979: Can set the date format in consultation notes.</p>
 <p>5.0.979: Can set automatic note citations in export to OpenDocument.</p>
 <p>5.0.979: Note citations in Bible editor follow settings in stylesheet.</p>
 <p>5.0.979: Check on space before final note or cross reference markup.</p>
