Fixed: Clicking the button to create a note several times results in multiple identical notes.
https://github.com/bibledit/cloud/issues/762

--- a/notes/comment.html
+++ b/notes/comment.html
@@ -7,7 +7,7 @@
 <div id="body" class="width100 height50"></div>
 <input type="hidden" id="id" value=##id## />
 <p>
-  <input type="submit" id="create2" value="translate("Create")" />
+  <input type="submit" id="create2" value="translate("Create")" onclick="this.disabled=true" />
   <input type="submit" id="cancel2" value="translate("Cancel")" />
 </p>
 <link rel="stylesheet" type="text/css" href="../quill/quill.notes.css?##VERSION##">
