Fixed Note status not always showing
https://github.com/bibledit/cloud/issues/763

--- a/notes/comment.html
+++ b/notes/comment.html
@@ -1,6 +1,6 @@
 <p><a href="index">translate("Back to notes list")</a></p>
 <p>translate("Passage"): ##passage##</p>
-<p>translate("Summary"): ##summary##</p>
+<p>translate("Summary"): ##summary## ##status##</p>
 <div>##content##</div>
 <hr>
 <p>translate("Add a comment to this note:")</p>
