Cleanup and version bump
https://github.com/bibledit/cloud/issues/764

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.980: The Bible editor preview scrolls to the focused verse.</p>
 <p>5.0.979: Fixed: Clicking the button to create a note several times results in multiple identical notes.</p>
 <p>5.0.979: Can set the date format in consultation notes.</p>
 <p>5.0.979: Can set automatic note citations in export to OpenDocument.</p>
