--- a/styles/view.html
+++ b/styles/view.html
@@ -50,11 +50,9 @@
 <tr>
   <td>translate("Color")</td>
   <td><input id="fgcolor" type="text" class="coloris" value="##color##"></td>
-  <td><a href="view?sheet=##sheet##&style=##style##&textcolor=">[translate ("edit")]</a></td></tr>
 <tr>
   <td>translate("Background color")</td>
   <td><input id="bgcolor" type="text" class="coloris" value="##backgroundcolor##"></td>
-  <td><a href="view?sheet=##sheet##&style=##style##&backgroundcolor=">[translate ("edit")]</a></td></tr>
 <!-- #ENDZONE color_relevant -->
 
 <!-- #BEGINZONE print_relevant -->
@@ -109,6 +107,7 @@
   width: 100%;
   height: 100%;
   border-radius: 5px;
+  border-style: solid;
 }
 </style>
 <script type="text/javascript" src="../coloris/coloris.min.js"></script>
