--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.980: Bibledit for Windows downloads exported USFM files, instead of viewing them.</p>
 <p>5.0.980: Fixed: Prints only the first page of the search results.</p>
 <p>5.0.980: Can read and set numeric value of color of a style in the styles editor.</p>
 <p>5.0.980: The Bible editor preview scrolls to the focused verse.</p>
