Setting to limit Bibles where to get change notifications from
... produced by named contributors.
https://github.com/bibledit/cloud/issues/779

--- a/user/notifications.html
+++ b/user/notifications.html
@@ -113,7 +113,7 @@ translate("Receive daily mail with the number of online change notifications awa
 </p>
 
 <p>
-translate("Get change notifications for these Bibles:")
+translate("Get notifications of changes made by anyone in these Bibles:")
 <!-- #BEGINITERATION changenotificationbible -->
 | <input type="checkbox" name="changenotificationbible##bible##" onchange="checkbox_v2(this)" ##checked## /> ##bible##
 <!-- #ENDITERATION changenotificationbible -->
