--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.981: Can set from which Bibles to get the change notifications.</p>
 <p>5.0.980: Can copy data from Bibledit to Paratext and vice versa.</p>
 <p>5.0.980: Fixed: Bibledit for macOS did not download exported files.</p>
 <p>5.0.980: Bibledit for Windows downloads exported USFM files, instead of viewing them.</p>
