Updated install steps macOS
https://github.com/bibledit/cloud/issues/801

--- a/help/installosx.html
+++ b/help/installosx.html
@@ -1,13 +1,25 @@
 <h1>translate("Install Bibledit on macOS")</h1>
 <p>
-  translate("This assumes a standard installation of the operating system.")
+translate("This assumes a standard installation of the operating system.")
 </p>
 
 <ol>
 
-<li><a href="https://itunes.apple.com/us/app/bibledit/id996639148" ##external##>translate("Download Bibledit from the App Store.")</a></li>
+<li>
+  translate("Download Bibledit.zip from")
+  <a href="https://github.com/bibledit/macos/releases" ##external##>https://github.com/bibledit/macos/releases</a>
+</li>
 
-<li>translate("Install Bibledit.")</li>
+<!--  <li><a href="https://itunes.apple.com/us/app/bibledit/id996639148" ##external##>translate("Download Bibledit from the App Store.")</a></li>-->
+
+<!--  <li>translate("Install Bibledit.")</li>-->
+
+<li>
+translate("Unpack it.")
+translate("But most likely macOS will already have done this for you.")
+</li>
+
+<li>translate("Drag Bibledit to the Applications folder.")</li>
 
 <li>translate("Start it from the Applications.")</li>
 
