--- a/help/installosx.html
+++ b/help/installosx.html
@@ -5,23 +5,23 @@ translate("This assumes a standard installation of the operating system.")
 
 <ol>
 
-<li>
-  translate("Download Bibledit.zip from")
-  <a href="https://github.com/bibledit/macos/releases" ##external##>https://github.com/bibledit/macos/releases</a>
-</li>
+  <li><a href="https://itunes.apple.com/us/app/bibledit/id996639148" ##external##>translate("Install Bibledit from the App Store.")</a></li>
 
-<!--  <li><a href="https://itunes.apple.com/us/app/bibledit/id996639148" ##external##>translate("Download Bibledit from the App Store.")</a></li>-->
+<!--<li>-->
+<!--  translate("Download Bibledit.zip from")-->
+<!--  <a href="https://github.com/bibledit/macos/releases" ##external##>https://github.com/bibledit/macos/releases</a>-->
+<!--</li>-->
 
 <!--  <li>translate("Install Bibledit.")</li>-->
 
-<li>
-translate("Unpack it.")
-translate("But most likely macOS will already have done this for you.")
-</li>
+<!--<li>-->
+<!--translate("Unpack it.")-->
+<!--translate("But most likely macOS will already have done this for you.")-->
+<!--</li>-->
+<!---->
+<!--<li>translate("Drag Bibledit to the Applications folder.")</li>-->
 
-<li>translate("Drag Bibledit to the Applications folder.")</li>
-
-<li>translate("Start it from the Applications.")</li>
+<!--<li>translate("Start it from the Applications.")</li>-->
 
 <li>translate("Open Bibledit.")</li>
 
