--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.984: Removes word-level attributes in the editor preview.</p>
 <p>5.0.984: Removes word-level attributes when exporting a Bible.</p>
 <p>5.0.983: Provide passage for Accordance only after setup is complete.</p>
 <p>5.0.982: Bibledit on macOS failed to work from the App Store. It can now be downloaded from GitHub instead.</p>
