Can select Bible on search/replace pages
https://github.com/bibledit/cloud/issues/799

--- a/search/replace.html
+++ b/search/replace.html
@@ -1,5 +1,8 @@
 <div id="searchbox">
-  ##bible##
+  <label for="bibleselect">translate("Bible"): </label>
+  <select id="bibleselect" name="bibleselect" value="##bible##">
+    ##bibleoptags##
+  </select>
   <input id="searchentry" type="text" value="" placeholder="translate("Search for")" />
   ▶
   <input id="replaceentry" type="text" value="" placeholder="translate("Replace with")" />
