--- a/search/replace2.html
+++ b/search/replace2.html
@@ -1,6 +1,8 @@
 <p>
-  translate("Bible"): 
-  ##bible##
+  <label for="bibleselect">translate("Bible"): </label>
+  <select id="bibleselect" name="bibleselect" value="##bible##">
+    ##bibleoptags##
+  </select>
 </p>
 <p>
   <input id="searchentry" type="text" value="" placeholder="translate("Search for")" />
