--- a/personalize/index.html
+++ b/personalize/index.html
@@ -206,8 +206,7 @@ translate ("Once in advanced mode, return to basic mode via menu Settings / Basi
 <br>
 <p>
 <input type="checkbox" name="showchanges" onchange="checkbox_v2(this)" ##showchanges## />
-translate ("Show the changes.")
-translate ("Whether to have a menu entry to go to the changes.")
+translate ("Have a menu entry to show the changes.")
 </p>
 
 <!-- #BEGINZONE cloud_mode -->
