--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,9 @@
-<h3>translate("Bibledit Cloud connection")</h3>
+<h3>
+<!-- #BEGINZONE basicmode -->
+<span><a href="../personalize/index" title="translate ("Go back")">◀</a></span>
+<!-- #ENDZONE basicmode -->
+translate("Bibledit Cloud connection")
+</h3>
 
 <!-- #BEGINZONE clienton -->
 <p>
