--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.984: Sub-pages from Settings in basic mode have a back arrow to return to the Settings.</p>
 <p>5.0.984: Can select active Bible on search pages.</p>
 <p>5.0.984: Removes word-level attributes in the editor preview.</p>
 <p>5.0.984: Removes word-level attributes when exporting a Bible.</p>
