--- a/resource/translated1edit.html
+++ b/resource/translated1edit.html
@@ -1,4 +1,4 @@
-<h2>translate("translated resource") "##name##"</h2>
+<h2>translate("Translated resource") "##name##"</h2>
 
 <p class="success">##success##</p>
 <p class="error">##error##</p>
@@ -7,60 +7,27 @@
 
 <br>
 <p>
-translate("Base resource"):
-##base##
-<a href="translated1edit?name=##name##&base=">[translate ("edit")]</a>
-</p>
-
-<p>
-translate("Updated resource"):
-##update##
-<a href="translated1edit?name=##name##&update=">[translate ("edit")]</a>
+translate("Original resource"):
+##original##
+<a href="translated1edit?name=##name##&original=">[translate ("edit")]</a>
 </p>
 <p>
-translate("This resource will take the base resource as a starting point.")
-translate("It will compare the updated resource with the base resource.")
-translate("Any words that the updated resource has added as compared to the base resource will be shown in bold.")
-translate("Any words that were removed will be shown in strikethrough.")
+translate("Language of the original resource"):
+##source##
+<a href="translated1edit?name=##name##&source=">[translate ("edit")]</a>
 </p>
-
+<p>
+translate("Language to translate the resource into"):
+##target##
+<a href="translated1edit?name=##name##&target=">[translate ("edit")]</a>
+</p>
 <br>
 <p>
-translate("Characters to remove"):
-##remove##
-<a href="translated1edit?name=##name##&remove=">[translate ("edit")]</a>
-</p>
-<p>
-translate("Characters to be removed from the base and updated resources before doing the comparison.")
-translate("Separate the characters by spaces.")
-translate("Example"): . ! ? :
-</p>
-
-<br>
-<p>
-translate("Characters to replace"):
-##replace##
-<a href="translated1edit?name=##name##&replace=">[translate ("edit")]</a>
-</p>
-<p>
-translate("Characters to search for and be replaced in the base and updated resources before doing the comparison.")
-translate("Separate the sets by spaces.")
-translate("First enter the characters to search for.")
-translate("Then enter the = sign.")
-translate("Finally enter the characters to be substituted.")
-translate("Example"): ῃ=η ῳ=ω search=replace
-</p>
-
-<br>
-<p>
-<input type="checkbox" name="diacritics" onchange="checkbox_v2(this, '##name##')" ##diacritics## />
-translate("Remove diacritics from the resources before doing the comparison.")
-</p>
-
-<br>
-<p>
-<input type="checkbox" name="casefold" onchange="checkbox_v2(this, '##name##')" ##casefold## />
-translate("Do case folding of the resources before doing the comparison.")
+translate("This translated resource will take the original resource as a starting point.")
+translate("It will send the original resource to Google Translate for translation.")
+translate("It then displays the resource as translated by Google Translate.")
+translate("Note that this is a machine translation.")
+translate("It may not be accurate.")
 </p>
 
 <br>
@@ -68,8 +35,8 @@ translate("Do case folding of the resources before doing the comparison.")
 <input type="checkbox" name="cache" onchange="checkbox_v2(this, '##name##')" ##cache## />
 translate("Cache the resource on client devices.")
 translate("Caching makes the resource available offline.")
-translate("Caching makes a snapshot of the base and updated resources.")
-translate("If the base or updated resources change after the snapshot, the client device does not display those changes.")
+translate("Caching makes a snapshot of the translated resource.")
+translate("If that resource changes after taking the snapshot, the client device does not display those changes.")
 </p>
 
 <br>
