--- a/resource/select.html
+++ b/resource/select.html
@@ -16,4 +16,5 @@
 <p><a href="?page=##page##&studylight=">translate("StudyLight resources")</a></p>
 <!-- #ENDZONE sensitive_bible_resource -->
 <p><a href="?page=##page##&comparative=">translate("Comparative resources")</a></p>
+<p><a href="?page=##page##&translated=">translate("Translated resources")</a></p>
 <h3><a href="##caller##">translate("Cancel")</a></h3>
