Google Translate setup info
If the google JSON key is not found, then enable a section with info about how to set it up. https://github.com/bibledit/cloud/issues/803

--- a/resource/select.html
+++ b/resource/select.html
@@ -16,5 +16,11 @@
 <p><a href="?page=##page##&studylight=">translate("StudyLight resources")</a></p>
 <!-- #ENDZONE sensitive_bible_resource -->
 <p><a href="?page=##page##&comparative=">translate("Comparative resources")</a></p>
-<p><a href="?page=##page##&translated=">translate("Translated resources")</a></p>
+<p>
+<a href="?page=##page##&translated=">translate("Translated resources")</a>
+<!-- #BEGINZONE setup_translated -->
+translate ("Google Translate has not yet been set up.")
+<a href="../system/googletranslate">translate("Ask the administrator to set it up here.")</a>
+<!-- #ENDZONE setup_translated -->
+</p>
 <h3><a href="##caller##">translate("Cancel")</a></h3>
