Add dependency on libutf8proc
https://github.com/bibledit/cloud/issues/821

--- a/help/installcloudcentos.html
+++ b/help/installcloudcentos.html
@@ -17,7 +17,7 @@
 </li>
 <li>
   <p>translate("Install the software Bibledit relies on:")</p>
-  <p><code>sudo yum install autoconf automake gcc gcc-c++ gcc-toolset-10-gcc-c++ libtool git zip unzip pkgconfig libcurl-devel openssl-devel curl make poppler-utils libxml2-devel</code></p>
+  <p><code>sudo yum install autoconf automake gcc gcc-c++ gcc-toolset-10-gcc-c++ libtool git zip unzip pkgconfig libcurl-devel openssl-devel curl make poppler-utils libxml2-devel utf8proc-devel</code></p>
 </li>
 <li>
   <p>
