--- a/help/installcloudsourcedebian.html
+++ b/help/installcloudsourcedebian.html
@@ -11,7 +11,7 @@
 </li>
 <li>
   <p>translate("Install the software Bibledit relies on:")</p>
-  <p><code>sudo apt install build-essential autotools-dev autoconf autoconf-archive git zip pkgconf libcurl4-openssl-dev libssl-dev poppler-utils libsword-utils diatheke ldap-utils libmimetic-dev certbot libxml2-dev</code></p>
+  <p><code>sudo apt install build-essential autotools-dev autoconf autoconf-archive git zip pkgconf libcurl4-openssl-dev libssl-dev poppler-utils libsword-utils diatheke ldap-utils libmimetic-dev certbot libxml2-dev libutf8proc-dev</code></p>
 </li>
 <li>
   <p>
@@ -22,7 +22,7 @@
 <li>
   <p>translate("Unpack the downloaded Bibledit in folder bibledit:")</p>
   <p><code>mkdir -p bibledit</code></p>
-  <p><code>tar xf bibledit-5.0.8xx.tar.gz -C bibledit --strip-components=1</code></p>
+  <p><code>tar xf bibledit-5.0.9xx.tar.gz -C bibledit --strip-components=1</code></p>
 </li>
 <li>
   <p>translate("Change to the directory:")</p>
