--- a/help/installcloudsourcedebian.html
+++ b/help/installcloudsourcedebian.html
@@ -23,6 +23,9 @@
   <p>translate("Unpack the downloaded Bibledit in folder bibledit:")</p>
   <p><code>mkdir -p bibledit</code></p>
   <p><code>tar xf bibledit-5.0.9xx.tar.gz -C bibledit --strip-components=1</code></p>
+  <p>
+  translate("Change the 9xx above to the version number of Bibledit that was downloaded.")
+  </p>
 </li>
 <li>
   <p>translate("Change to the directory:")</p>
