Disable browser autocorrect
https://github.com/bibledit/cloud/issues/807

--- a/client/index.html
+++ b/client/index.html
@@ -23,19 +23,19 @@ translate("Bibledit Cloud connection")
   <table>
   <tr>
     <td align="right">translate("Internet address")</td>
-    <td><input type="text" name="address" maxlength="1000" value="##address##" autofocus /></td>
+    <td><input type="text" name="address" maxlength="1000" value="##address##" autofocus autocorrect="off" autocapitalize="off" /></td>
   </tr>
     <tr>
       <td align="right">translate("Port number")</td>
-      <td><input type="text" name="port" maxlength="6" value="##port##" /></td>
+      <td><input type="text" name="port" maxlength="6" value="##port##" autocorrect="off" autocapitalize="off" /></td>
     </tr>
     <tr>
     <td align="right">translate("Username")</td>
-    <td><input type="text" name="user" maxlength="30" /></td>
+    <td><input type="text" name="user" maxlength="30" autocorrect="off" autocapitalize="off" /></td>
     </tr>
     <tr>
       <td align="right">translate("Password")</td>
-      <td><input type="password" name="pass" maxlength="30" /></td>
+      <td><input type="password" name="pass" maxlength="30" autocorrect="off" autocapitalize="off" /></td>
     </tr>
     <tr>
       <td></td>
