--- a/search/replace.html
+++ b/search/replace.html
@@ -3,9 +3,9 @@
   <select id="bibleselect" name="bibleselect" value="##bible##">
     ##bibleoptags##
   </select>
-  <input id="searchentry" type="text" value="" placeholder="translate("Search for")" />
+  <input id="searchentry" type="text" value="" placeholder="translate("Search for")" autocorrect="off" autocapitalize="off" />
   ▶
-  <input id="replaceentry" type="text" value="" placeholder="translate("Replace with")" />
+  <input id="replaceentry" type="text" value="" placeholder="translate("Replace with")" autocorrect="off" autocapitalize="off" />
   <input type="checkbox" id="casesensitive" checked="checked">translate("Case sensitive")
   <input id="previewbutton" type="button" value="translate("Preview")" />
   <img id="searchloading" src="/pix/loading.gif">
