--- a/search/search2.html
+++ b/search/search2.html
@@ -5,7 +5,7 @@
   </select>
 </p>
 <p>
-  <input id="searchentry" type="text" value="" placeholder="translate("Search for")" />
+  <input id="searchentry" type="text" value="" placeholder="translate("Search for")" autocorrect="off" autocapitalize="off" />
   <input id="searchbutton" type="button" value="translate("Search")"  />
   <img id="searchloading" src="/pix/loading.gif">
   <span id="hitcount"></span>
