--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.986: Disable autocorrect and autocapitalize for username and search entries.</p>
 <p>5.0.985: Can define a "Translated resource". This translates a resource through Google Translate.</p>
 <p>5.0.984: Fixed: Bible editors did not used the selected font.</p>
 <p>5.0.984: Sub-pages from Settings in basic mode have a back arrow to return to the Settings.</p>
