--- a/search/index.html
+++ b/search/index.html
@@ -3,7 +3,7 @@
   <select id="bibleselect" name="bibleselect" value="##bible##">
     ##bibleoptags##
   </select>
-  <input id="searchentry" type="text" value="" placeholder="translate("Search for")" />
+  <input id="searchentry" type="text" value="" placeholder="translate("Search for")" autocorrect="off" autocapitalize="off" />
   <input id="searchbutton" type="button" value="translate("Search")"  />
   <img id="searchloading" src="/pix/loading.gif">
   <progress value="0" max="100"></progress>
