--- a/search/replace2.html
+++ b/search/replace2.html
@@ -5,9 +5,9 @@
   </select>
 </p>
 <p>
-  <input id="searchentry" type="text" value="" placeholder="translate("Search for")" />
+  <input id="searchentry" type="text" value="" placeholder="translate("Search for")" autocorrect="off" autocapitalize="off" />
   ▶
-  <input id="replaceentry" type="text" value="" placeholder="translate("Replace with")" />
+  <input id="replaceentry" type="text" value="" placeholder="translate("Replace with")" autocorrect="off" autocapitalize="off" />
   <input id="previewbutton" type="button" value="translate("Preview")"  />
   <img id="searchloading" src="/pix/loading.gif">
   <input id="applybutton" type="button" value="translate("Apply all")"  />
