The number prefixed to the filenames of the exported books of a Bible now depends on the book order set for that Bible
https://github.com/bibledit/cloud/issues/810

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.987: The number prefixed to the filenames of the exported books of a Bible now depends on the book order set for that Bible.</p>
 <p>5.0.987: Logs problems with the https certificate for the embedded server.</p>
 <p>5.0.986: Disable autocorrect and autocapitalize for username and search entries.</p>
 <p>5.0.985: Can define a "Translated resource". This translates a resource through Google Translate.</p>
