Clearer error message when access to Google Translate has not yet been set up
https://github.com/bibledit/cloud/issues/824

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.988: Clearer error message when access to Google Translate has not yet been set up.</p>
 <p>5.0.988: Client downloads list of comparative resources from Cloud and can select from those.</p>
 <p>5.0.988: Better checking on internet address, port number, and credentials, when connecting to the Cloud.</p>
 <p>5.0.987: The number prefixed to the filenames of the exported books of a Bible now depends on the book order set for that Bible.</p>
