--- a/resource/select.html
+++ b/resource/select.html
@@ -19,8 +19,10 @@
 <p>
 <a href="?page=##page##&translated=">translate("Translated resources")</a>
 <!-- #BEGINZONE setup_translated -->
+<span class="error">
 translate ("Google Translate has not yet been set up.")
 <a href="../system/googletranslate">translate("Ask the administrator to set it up here.")</a>
+</span>
 <!-- #ENDZONE setup_translated -->
 </p>
 <h3><a href="##caller##">translate("Cancel")</a></h3>
