--- a/resource/translated9edit.html
+++ b/resource/translated9edit.html
@@ -5,6 +5,12 @@
 <br>
 <p><a href="?new=">translate("Create a new empty translated resource")</a></p>
 <br>
+<!-- #BEGINZONE setup_translated -->
+<p class="error">
+translate ("Google Translate has not yet been set up.")
+<a href="../system/googletranslate">translate("Ask the administrator to set it up here.")</a>
+</p>
+<!-- #ENDZONE setup_translated -->
 <p>
 translate("A translated resource takes one existing resources as input.")
 translate("It defines the source language and the target language.")
