--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.989: Clarify code 426 in the Journal to mean that the client should upgrade to https when connecting to the Cloud.</p>
 <p>5.0.989: Can create a Translated resource based on a Bible Gateway resource.</p>
 <p>5.0.988: Can set the paragraph style for the \fig marker for Bible figures.</p>
 <p>5.0.988: Clearer error message when access to Google Translate has not yet been set up.</p>
