--- a/resource/organize.html
+++ b/resource/organize.html
@@ -1,7 +1,9 @@
-<h3>translate("Resource Organizer")</h3>
+<h3>translate("Resource Organizer")<span class="tooltip"></span>
+<span class="tooltip-text">translate("You can reorder the resources below by holding, then dragging and dropping.")</span>
+</h3>
 <p class="success">##success##</p>
 <p class="error">##error##</p>
-<p><a href="index">[translate("back")</a>]</p>
+<p><a href="index">[translate("back")]</a></p>
 <br>
 <div id="list" class="slippylist">
 ##activesblock##
