--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.990: Space below the focused verse in the verse editor now has no visible height anymore.</p>
 <p>5.0.989: Fix memory leaks while getting some types of resources.</p>
 <p>5.0.989: Clarify code 426 in the Journal to mean that the client should upgrade to https when connecting to the Cloud.</p>
 <p>5.0.989: Can create a Translated resource based on a Bible Gateway resource.</p>
