Add pugixml to install steps
https://github.com/bibledit/cloud/issues/844

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -12,7 +12,7 @@
 <p>5.0.987: Logs problems with the https certificate for the embedded server.</p>
 <p>5.0.986: Disable autocorrect and autocapitalize for username and search entries.</p>
 <p>5.0.985: Can define a "Translated resource". This translates a resource through Google Translate.</p>
-<p>5.0.984: Fixed: Bible editors did not used the selected font.</p>
+<p>5.0.984: Fixed: Bible editors did not use the selected font.</p>
 <p>5.0.984: Sub-pages from Settings in basic mode have a back arrow to return to the Settings.</p>
 <p>5.0.984: Can select active Bible on search pages.</p>
 <p>5.0.984: Removes word-level attributes in the editor preview.</p>
