--- a/help/installcloudcentos.html
+++ b/help/installcloudcentos.html
@@ -15,7 +15,7 @@
 </li>
 <li>
   <p>translate("Install the software Bibledit relies on:")</p>
-  <p><code>sudo yum install autoconf automake gcc gcc-c++ libtool git zip unzip pkgconfig libcurl-devel openssl-devel curl make poppler-utils libxml2-devel utf8proc gumbo-parser-devel libtidy-devel</code></p>
+  <p><code>sudo dnf install autoconf automake gcc gcc-c++ libtool git zip unzip pkgconfig libcurl-devel openssl-devel curl make poppler-utils libxml2-devel utf8proc gumbo-parser-devel libtidy-devel pugixml-devel</code></p>
 </li>
 <li>
   <p>translate("Go to the home directory:")</p>
