Converts the non-UTF8 characters...
... in the Easy English Bible Commentary.
Looks better now.
https://github.com/bibledit/cloud/issues/853

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,7 +1,8 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.993: Displays the Easy English Bible Commentary lots better.</p>
 <p>5.0.992: Embedded libtidy fixes crash in the system-provided libtidy.</p>
-<p>5.0.991: Temporal work-around for crash in the libtidy HTML/XML syntax checker and reformatter: No longer displays the Easy English Bible well.</p>
+<p>5.0.991: Temporal work-around for crash in the libtidy HTML/XML syntax checker and reformatter: No longer displays the Easy English Bible Commentary well.</p>
 <p>5.0.990: Space below the focused verse in the verse editor now has no visible height anymore.</p>
 <p>5.0.989: Fix memory leaks while getting some types of resources.</p>
 <p>5.0.989: Clarify code 426 in the Journal to mean that the client should upgrade to https when connecting to the Cloud.</p>
