Extra diagnostics secure https
https://github.com/bibledit/cloud/issues/862

--- a/help/config.html
+++ b/help/config.html
@@ -99,7 +99,7 @@ If your Bibledit Cloud is accessible at e.g. http://bibledit.org:8090,
 then the secure version will be accessible at https://bibledit.org:8091.
 Notice that the port number is increased by one.
 Open your Bibledit Cloud in a browser and check that the secure connection works.
-Double check via command "systemctl status bibledit-cloud" that it listens on http://localhost:... and also on https://localhost... If it does not listen on https, then the secure web server does not run due to a problem in the certificates.
+Double check via command "systemctl status bibledit-cloud" that it listens on http://localhost:... and also on https://localhost... If it does not listen on https, then the secure web server does not run due to a problem in the certificates. The Journal within Bibledit Cloud will provide additional diagnostics in this case.
 </p>
 <br>
 <p>
