--- a/resource/select.html
+++ b/resource/select.html
@@ -1,23 +1,23 @@
 <h3>translate("Resource categories")</h3>
-<p><a href="?page=##page##&bible=">translate("Bibles within Bibledit")</a></p>
-<p><a href="?page=##page##&usfm=">translate("USFM resources")</a></p>
+<p><a href="?page=##page##&type=##type##&bible=">translate("Bibles within Bibledit")</a></p>
+<p><a href="?page=##page##&type=##type##&usfm=">translate("USFM resources")</a></p>
 <!-- #BEGINZONE sensitive_bible_resource -->
-<p><a href="?page=##page##&web_orig=">translate("Web resources"): translate ("Original language texts")</a></p>
-<p><a href="?page=##page##&web_bibles=">translate("Web resources"): translate ("Bibles and notes")</a></p>
+<p><a href="?page=##page##&type=##type##&web_orig=">translate("Web resources"): translate ("Original language texts")</a></p>
+<p><a href="?page=##page##&type=##type##&web_bibles=">translate("Web resources"): translate ("Bibles and notes")</a></p>
 <!-- #ENDZONE sensitive_bible_resource -->
-<p><a href="?page=##page##&image=">translate("Image resources")</a></p>
+<p><a href="?page=##page##&type=##type##&image=">translate("Image resources")</a></p>
 <!-- #BEGINZONE sensitive_bible_resource -->
-<p><a href="?page=##page##&lexicon=">translate("Lexicons")</a></p>
-<p><a href="?page=##page##&sword=">translate("SWORD modules")</a></p>
+<p><a href="?page=##page##&type=##type##&lexicon=">translate("Lexicons")</a></p>
+<p><a href="?page=##page##&type=##type##&sword=">translate("SWORD modules")</a></p>
 <!-- #ENDZONE sensitive_bible_resource -->
-<p><a href="?page=##page##&divider=">translate("Dividers")</a></p>
+<p><a href="?page=##page##&type=##type##&divider=">translate("Dividers")</a></p>
 <!-- #BEGINZONE sensitive_bible_resource -->
-<p><a href="?page=##page##&biblegateway=">translate("BibleGateway resources")</a></p>
-<p><a href="?page=##page##&studylight=">translate("StudyLight resources")</a></p>
+<p><a href="?page=##page##&type=##type##&biblegateway=">translate("BibleGateway resources")</a></p>
+<p><a href="?page=##page##&type=##type##&studylight=">translate("StudyLight resources")</a></p>
 <!-- #ENDZONE sensitive_bible_resource -->
-<p><a href="?page=##page##&comparative=">translate("Comparative resources")</a></p>
+<p><a href="?page=##page##&type=##type##&comparative=">translate("Comparative resources")</a></p>
 <p>
-<a href="?page=##page##&translated=">translate("Translated resources")</a>
+<a href="?page=##page##&type=##type##&translated=">translate("Translated resources")</a>
 <!-- #BEGINZONE setup_translated -->
 <span class="error">
 translate ("Google Translate has not yet been set up.")
