Privilege to "apply" stylesheet
https://github.com/bibledit/cloud/issues/859

--- a/manage/privileges.html
+++ b/manage/privileges.html
@@ -30,7 +30,7 @@ translate("Can use advanced mode in Cloud.")
 
 <p>
 <input type="checkbox" name="editstylesheets" onchange="checkbox_v2(this, '##user##')" ##editstylesheetschecked## ##editstylesheetsdisabled## />
-translate("Can edit stylesheets.")
+translate("Can apply stylesheets.")
 </p>
 
 <br>
